@@ -5,6 +5,7 @@
 	- We do no longer test on Windows XP/2003
 	- We may accept pull request for XP support if the code quality is sufficient.
 	- We recommend to use the V6 branch on Windows XP
+  * Fixed issue #794: ScrollIntoView() by column centers column also when center is false
   * Fixed issue #789: Issues with toHideSelection
   * Fixed issue #792: "Invalid window handle" when using styles
   * Fixed issue #788: Wrong logic in GetEffectiveColor. coStyleColor has been added to DefaultColumnOptions.
